fixed top/bottom spacing to center

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1256,7 +1256,7 @@
 			}
 
 				#wrapper.tall {
-					padding-bottom: 6em;
+					padding-bottom: 3em;
 				}
 
 		/* Nav */
